I2B2UI-517 - Intermittent > Reload of query takes a little time and seems stucks (Network call remains pending for couple of minutes) - Fixed logic for removing display of progress cursor

--- a/assets/css/i2b2.css
+++ b/assets/css/i2b2.css
@@ -576,3 +576,7 @@ iframe.pluginCell {
 .goldenLayoutCol .lm_tab .lm_title {
 	padding: 1px 4px;
 }
+
+body.pendingRequest *{
+	cursor: progress !important;
+}
